--- a/.github/workflows/buildPackage.yml
+++ b/.github/workflows/buildPackage.yml
@@ -1,4 +1,4 @@
-name: Build-and-Push-to-Container-Registry-Recette
+name: Build-and-Push-to-Container-Registry
 
 on:
   workflow_run:
@@ -9,6 +9,7 @@ on:
 jobs:
   backend:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       packages: write
       contents: read
@@ -28,13 +29,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Définir l'environnement
+        run: |
+          if [ "${{ github.event.workflow_run.head_branch }}" == "develop" ]; then
+            echo "ENVIRONMENT=recette" >> $GITHUB_ENV
+          else
+            echo "ENVIRONMENT=prod" >> $GITHUB_ENV
+          fi
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: backend/Dockerfile-prod
           push: true
-          tags: ghcr.io/cripsoo/projetcloud/backend-recette:${{ steps.extract-version.outputs.version }}
+          tags: ghcr.io/cripsoo/projetcloud/backend-${{ env.ENVIRONMENT }}:${{ steps.extract-version.outputs.version }}
 
   frontend:
     runs-on: ubuntu-latest
@@ -63,4 +72,4 @@ jobs:
           context: .
           file: frontend/Dockerfile-prod
           push: true
-          tags: ghcr.io/cripsoo/projetcloud/frontend-recette:${{ steps.extract-version.outputs.version }}
+          tags: ghcr.io/cripsoo/projetcloud/frontend-${{ env.ENVIRONMENT }}:${{ steps.extract-version.outputs.version }}
