--- a/.github/workflows/testsUnitaires.yml
+++ b/.github/workflows/testsUnitaires.yml
@@ -2,9 +2,9 @@ name: Tests-Unitaires-Backend
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["develop", "prod"]
   pull_request:
-    branches: ["develop"]
+    branches: ["develop", "prod"]
 
 jobs:
   build:
@@ -19,6 +19,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
