--- a/.github/workflows/buildPackage.yml
+++ b/.github/workflows/buildPackage.yml
@@ -34,8 +34,10 @@ jobs:
         run: |
           if [ "${{ github.event.workflow_run.head_branch }}" == "develop" ]; then
             echo "::set-output name=environnement::"recette""
+            echo "On build l'image de recette"
           else
             echo "::set-output name=environnement::"prod""
+            echo "On build l'image de prod"
           fi
 
       - name: Build and push Docker image
@@ -66,6 +68,17 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Définir l'environnement
+        id: get-env
+        run: |
+          if [ "${{ github.event.workflow_run.head_branch }}" == "develop" ]; then
+            echo "::set-output name=environnement::"recette""
+            echo "On build l'image de recette"
+          else
+            echo "::set-output name=environnement::"prod""
+            echo "On build l'image de prod"
+          fi
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
