--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -2,51 +2,61 @@ name: testGandi
 
 on:
   workflow_dispatch:
-    inputs:
-      environment:
-        type: choice
-        description: "Choisir l'environnement"
-        required: true
-        options:
-          - recette
-          - prod
 
 jobs:
-  build:
-
+  compile:
+    name: Run docker file
     runs-on: ubuntu-latest
- 
+
     steps:
-      - name: Checkout du code
+      - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Connexion Azure
-        uses: azure/CLI@v1
+      - name: Run the build process with Docker
+        uses: addnab/docker-run-action@v3
         with:
-          azcliversion: 2.55.0
-          inlineScript: |
-            az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
-            az aks get-credentials --resource-group ProjetCloud-recette --name AKS-recette
+          image: ghcr.io/cripsoo/projetcloud/backend-recette:1.0.0
+          options: -v ${{ github.workspace }}:/
+          run: |
+            echo "Running script"
+            ls
 
-
-      - name: Installer kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.28.4'
-
-      - name: Debug Kubernetes 
-        run: |
-          sudo az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
-          sudo az aks get-credentials --resource-group ProjetCloud-recette --name AKS-recette
-          kubectl config view
-          kubectl get nodes
-          kubectl get pods --all-namespaces
-          IP=$(kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          echo "IP du service : $IP"
-
-      - name: Récupérer l'IP du service
-        id: get_ip
-        run: |
-          IP=$(kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          echo "IP du service : $IP"
-        shell: bash
+#jobs:
+#  build:
+#
+#    runs-on: ubuntu-latest
+#
+##    steps:
+##      - name: Checkout du code
+##        uses: actions/checkout@v2
+##
+##      - name: Connexion Azure
+##        uses: azure/CLI@v1
+##        with:
+##          azcliversion: 2.55.0
+##          inlineScript: |
+##            az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
+##            az aks get-credentials --resource-group ProjetCloud-recette --name AKS-recette
+##
+##
+##      - name: Installer kubectl
+##        uses: azure/setup-kubectl@v3
+##        with:
+##          version: 'v1.28.4'
+##
+##      - name: Debug Kubernetes
+##        run: |
+##          sudo az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
+##          sudo az aks get-credentials --resource-group ProjetCloud-recette --name AKS-recette
+##          kubectl config view
+##          kubectl get nodes
+##          kubectl get pods --all-namespaces
+##          IP=$(kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+##          echo "IP du service : $IP"
+##
+##      - name: Récupérer l'IP du service
+##        id: get_ip
+##        run: |
+##          IP=$(kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+##          echo "IP du service : $IP"
+##        shell: bash
