--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
       - name: Run the build process with Docker
         uses: addnab/docker-run-action@v3
         with:
