--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
       - name: Run the build process with Docker
         uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/cripsoo/projetcloud/backend-recette:1.0.0
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: gcr.io
+          image: cripsoo/projetcloud/backend-recette:1.0.0
           options: -v ${{ github.workspace }}:/
           run: |
             echo "Running script"
