--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -11,6 +11,8 @@ jobs:
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+      volumes:
+        - ${{ github.workspace }}:/
     steps:
       - name: super-step
         shell: bash
