--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -12,7 +12,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
       volumes:
-        - ${{ github.workspace }}:/
+        - ${{ github.workspace }}:/repo
     steps:
       - name: super-step
         shell: bash
