--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -19,21 +19,20 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Restart volume
-        uses: docker://docker
-        with:
-          args: docker restart outils
+        uses: docker restart outils
 
       - name: Executer commandes
-        uses: docker://outils
-        with:
-          entrypoint: /bin/sh
-          args: |
+        run: |
+          docker exec outils /bin/sh -c "
             cd /repo/outils/terraform/scripts
-            sudo apt update
-            sudo apt install python3
-            sudo apt install python3-pip
-            sudo pip3 install requests
-            python3 update_api.py ${{ secrets.GANDI_API_KEY }} 12.12.12.12
+            apt update
+            apt install -y python3
+            apt install -y python3-pip
+            pip3 install requests
+            python3 update_api.py $GANDI_API_KEY 12.12.12.12
+          "
+        env:
+          GANDI_API_KEY: ${{ secrets.GANDI_API_KEY }}
 
 #jobs:
 #  build:
