--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -19,7 +19,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Restart volume
-        uses: docker restart outils
+        uses: docker://docker
+        with:
+          args: docker restart outils
 
       - name: Executer commandes
         run: |
