--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -34,6 +34,7 @@ jobs:
             sudo az login --user $AZURE_LOGIN --password $AZURE_PASSWORD
             sudo az aks get-credentials --resource-group ProjetCloud-recette --name AKS-recette
             IP=$(kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+            echo $(kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
             python3 update_api.py $GANDI_API_KEY $IP
           "
         env:
