--- a/.github/workflows/testGandi.yml
+++ b/.github/workflows/testGandi.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout du code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Connexion Azure
         uses: azure/CLI@v1
@@ -43,4 +43,6 @@ jobs:
           pip install requests
 
       - name: Mettre à jour l'ip du DNS
-        run: python $GITHUB_WORKSPACE/outils/terraform/scripts ${{ secrets.GANDI_API_KEY }} ${{ steps.get-ip.outputs.ingress-ip }}
+        run: |
+          echo "On met à jour l'ip: ${{ steps.get-ip.outputs.ingress-ip }}"
+          python $GITHUB_WORKSPACE/outils/terraform/scripts ${{ secrets.GANDI_API_KEY }} ${{ steps.get-ip.outputs.ingress-ip }}
