--- a/.github/workflows/deployToEnv.yml
+++ b/.github/workflows/deployToEnv.yml
@@ -54,3 +54,23 @@ jobs:
           sudo az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
           cd $GITHUB_WORKSPACE/outils/terraform
           sudo terraform apply -var="githubToken=${{ secrets.GITHUB_TOKEN }}" -var="env_name=${{ github.event.inputs.environment }}" -auto-approve
+
+      - name: Installer Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Installer les dépendances python
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
+      - name: Récupérer l'IP du service
+        id: get_ip
+        shell: bash
+        run: |
+          sudo az login --user ${{ secrets.AZURE_LOGIN }} --password ${{ secrets.AZURE_PASSWORD }}
+          sudo az aks get-credentials --resource-group ProjetCloud-${{ github.event.inputs.environment }} --name AKS-${{ github.event.inputs.environment }}
+          IP=$(sudo kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "On met à jour l'ip: $IP"
+          python $GITHUB_WORKSPACE/outils/terraform/scripts/update_api.py ${{ secrets.GANDI_API_KEY }} $IP
