Test passage variables helm en global

--- a/outils/terraform/app/backend/templates/backend-deployment.yaml
+++ b/outils/terraform/app/backend/templates/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend-container
-          image: {{ .Values.image.repository }}{{ .Values.environment }}:{{ .Values.image.tag }}
+          image: {{ .Values.image.repository }}{{ .Values.global.environment }}:{{ .Values.image.tag }}
           ports:
             - containerPort: 8080
       imagePullSecrets:
