--- a/outils/terraform/app/frontend/templates/frontend-deployment.yaml
+++ b/outils/terraform/app/frontend/templates/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend-container
-          image: {{ .Values.image.repository }}{{ .Values.environment }}:{{ .Values.image.tag }}
+          image: {{ .Values.image.repository }}{{ .Values.global.environment }}:{{ .Values.image.tag }}
           ports:
             - containerPort: 80
       imagePullSecrets:
