--- a/.github/workflows/deployToEnv.yml
+++ b/.github/workflows/deployToEnv.yml
@@ -73,4 +73,4 @@ jobs:
           sudo az aks get-credentials --resource-group ProjetCloud-${{ github.event.inputs.environment }} --name AKS-${{ github.event.inputs.environment }}
           IP=$(sudo kubectl get services ingress-controller-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
           echo "On met à jour l'ip: $IP"
-          python $GITHUB_WORKSPACE/outils/terraform/scripts/update_api.py ${{ secrets.GANDI_API_KEY }} $IP
+          python $GITHUB_WORKSPACE/outils/terraform/scripts/update_api.py ${{ secrets.GANDI_API_KEY }} $IP ${{ github.event.inputs.environment }}
