--- a/outils/terraform/app/frontend/templates/frontend-deployment.yaml
+++ b/outils/terraform/app/frontend/templates/frontend-deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: frontend-container
           image: {{ .Values.image.repository }}{{ .Values.global.environment }}:{{ .Values.image.tag }}
+          env:
+            - name: VUE_APP_API_URL
+              value: https://{{ .Values.global.environment }}.groupe6.froissant.work/api/v1/
           ports:
             - containerPort: 80
       imagePullSecrets:
