--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,16 @@
 server {
+    set $domain $VUE_APP_DOMAIN;
+
     listen 80;
-    server_name recette.groupe6.froissant.work;
+    server_name $domain;
+
+    location /api {
+            proxy_pass http://$domain;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
     location / {
         root /usr/share/nginx/html;
