--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,6 @@
 server {
-    set $domain $VUE_APP_DOMAIN;
-
     listen 80;
-    server_name $domain;
-
-    location /api {
-            proxy_pass http://$domain;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    server_name $VUE_APP_DOMAIN;
 
     location / {
         root /usr/share/nginx/html;
@@ -18,4 +8,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /api/v1/ {
+        proxy_pass http://$VUE_APP_DOMAIN/api/v1/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
+
