--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -7,7 +7,7 @@ COPY ./frontend/vue/package.json ./
 RUN npm install
 COPY ./frontend/vue ./
 
-RUN npm run build
+RUN npm run build ---mode $VUE_APP_ENV
 
 FROM nginx:alpine
 
