--- a/outils/terraform/app/frontend/templates/frontend-deployment.yaml
+++ b/outils/terraform/app/frontend/templates/frontend-deployment.yaml
@@ -20,5 +20,7 @@ spec:
               value: "https://{{ .Values.global.environment }}.groupe6.froissant.work"
           ports:
             - containerPort: 80
+          # TODO REMOVE
+          imagePullPolicy: Always
       imagePullSecrets:
         - name: cloud-secret
