--- a/outils/terraform/configs/prod.conf
+++ b/outils/terraform/configs/prod.conf
@@ -1,4 +1,4 @@
 resource_group_name  = "projetcloud-prod-stockage"
-storage_account_name = "stockageprodpjc"
+storage_account_name = "stockageprodpjcv2"
 container_name       = "tfstate"
 key                  = "terraform.tfstate"
