Passage à l'URL prod let's encrypt

--- a/outils/terraform/app/ingress/templates/cluster-issuer.yaml
+++ b/outils/terraform/app/ingress/templates/cluster-issuer.yaml
@@ -4,8 +4,8 @@ metadata:
   name: letsencrypt
 spec:
   acme:
-{{/*    server: https://acme-v02.api.letsencrypt.org/directory*/}}
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
+{{/*    server: https://acme-staging-v02.api.letsencrypt.org/directory*/}}
     email: alexandre.dupre2001@gmail.com
     privateKeySecretRef:
       name: letsencrypt
